@@ -1,16 +1,29 @@
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 public class PS1 {
     static void main() {
         List<String> input = List.of("abc", "aabb", "defg", "xyzx", "mnop");
 
-        List<String> list1 = input.stream()
-                .filter(x -> x.chars().distinct().count() == x.length())
-                .collect(Collectors.toList());
+        List<String> list = input.stream()
+                .filter(str -> str.chars().distinct().count() == str.length())
+                .toList();
+        System.out.println(list);
 
-        list1.forEach(System.out::println);
+        String str1 = "hello how are you doing";
+        System.out.println("22. Count frequency of character in a string and also maintain the insertion order");
+        LinkedHashMap<Character, Long> charFreq = str1.chars()
+                .mapToObj(c -> (char) c)
+                .collect(Collectors.groupingBy(c -> c, LinkedHashMap::new, Collectors.counting()));
+
+        charFreq.forEach((k, v) -> System.out.println(k + " : " + v));
+
+        List<String> fruits = Arrays.asList("apple", "banana", "apple", "orange", "banana", "apple");
+
+        System.out.println("21. Create a Map of Word Frequencies");
+        Map<String, Long> collect = fruits.stream()
+                .collect(Collectors.groupingBy(fruit -> fruit, Collectors.counting()));
+
+        collect .forEach((k, v) -> System.out.println(k + " : " + v));
     }
 }
